--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -1,14 +1,50 @@
 ---
+# yaml 파일 시작
+
+
 # tasks file for client
+
 - name: Configure kubectl
+# 첫 번째 작업(play) : Configure kubectl
+# kubectl 바이너리 다운로드, 설치, 실행 가능하도록 설정
+# kubectl : Kubernetes 클러스터와 상호작용할 수 있는 CLI 도구
+
   get_url:
+  # 지정된 URL에서 파일을 다운로드할 때 사용하는 Ansible 모듈
+  
     url: https://dl.k8s.io/release/{{ KUBE_VERSION }}/bin/linux/amd64/kubectl
+    # kubectl 바이너리를 Kubernetes 공식 다운로드 URL에서 가져옴
+    # {{ KUBE_VERSION }}: 다운로드할 Kubernetes 버전을 변수로 설정
+      # Playbook 실행 시 이 변수를 설정해야 함
+      
     dest: /usr/local/bin/kubectl
+    # 다운로드한 파일을 /usr/local/bin/kubectl 경로에 저장
+    # /usr/local/bin/kubectl : 시스템에서 실행 파일을 찾는 표준 경로 중 하나
+    
     mode: +x
+    # 파일에 실행 권한 추가
+    # 다운로드한 kubectl 바이너리를 실행 가능하도록 설정
+
+
 
 - name: Creates directory
+# 두 번째 작업(play) : Creates directory
+# file 모듈을 사용해 사용자의 홈 디렉토리에 .kube 디렉토리를 생성하고, 적절한 소유자 및 그룹 설정
+# .kube : kubectl이 사용할 설정 파일을 저장할 디렉토리
+
   file:
+  # 디렉토리 또는 파일의 생성, 삭제, 속성 설정 등을 담당하는 Ansible 모듈
+  
     path: /home/ansible-user/.kube
+    # 생성할 디렉토리의 경로
+    # ansible-user의 홈 디렉토리 안에 .kube 디렉토리 생성
+    
     state: directory
+    # 경로를 디렉토리로 생성
+    # 이미 존재하면 상태 유지
+    
     owner: ansible-user
+    # 생성된 디렉토리의 소유자를 ansible-user로 설정
+    
     group: ansible-user
+    # 생성된 디렉토리의 그룹 소유자를 ansible-user로 설정
