--- a/k8s.yaml
+++ b/k8s.yaml
@@ -5,16 +5,16 @@
 
 - name: Install client
 # 첫 번째 작업(play) : Install client
-# 클라이언트 설치 (로컬 머신에서 실행됨)
-# 로컬 머신에서 필요한 클라이언트 소프트웨어(kubectl, kubeadm, helm 등) 설치
+# 로컬 머신에서 필요한 클라이언트 소프트웨어 설치
+# 클라이언트 소프트웨어 例: kubectl, kubeadm, helm 등
 
   hosts: localhost
-  # 작업 대상 호스트를 localhost로 지정
+  # 작업 대상 호스트를 localhost로 지정 => 로컬에서 실행
   # 즉, 로컬 컴퓨터에서 클라이언트 관련 작업을 수행함
   
   roles:
-  # 역할
-  # 관련 작업(task), 핸들러, 변수 등을 재사용 가능한 방식으로 구성한 것
+  # 역할 =>  작업을 재사용 가능하고 유지보수하기 쉽게 작성
+  # 각 역할(client)에 관련 작업(task), 핸들러(handler), 변수(vars) 등이 정의되어있음
   
     - client
     # client라는 역할을 실행
@@ -29,16 +29,18 @@
 # 例: Kubernetes 패키지 설치, 클러스터 초기화, 네트워크 플러그인 설치 등
 
   hosts: cluster
-  # 작업 대상 호스트를 cluster 그룹으로 지정
-  # 대상 : inventory 파일의 [cluster] 그룹에 포함된 모든 노드
+  # 작업 대상 호스트를 cluster 그룹으로 지정 => 클러스터 내 모든 노드에서 실행
+  # 즉, 대상 : inventory 파일의 [cluster] 그룹에 포함된 모든 노드
   
   become: true
   # 권한 상승(Privilege Escalation)을 사용해 작업 실행
   # 일반 사용자에서 root 사용자 권한으로 전환하여 작업 실행
   
   roles:
-  # 역할
+  # 역할 =>  작업을 재사용 가능하고 유지보수하기 쉽게 작성
+  # 각 역할(k8s)에 관련 작업(task), 핸들러(handler), 변수(vars) 등이 정의되어있음
   
     - k8s
     # k8s라는 역할 실행
     # Kubernetes 클러스터를 설치하기 위한 모든 작업이 roles/k8s/ 디렉토리에 정의되어 있음
+
