study ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,45 @@
-[defaults]
-inventory = ./inventory
-remote_user = ansible-user
-ask_pass = false
-roles_path = ./roles
+[defaults]  
+# Ansible 기본 설정을 정의하는 섹션
+# 현재 디렉토리의 inventory 파일을 기반으로 Ansible 플레이북 실행
+# ansible-user 계정으로 원격 서버에 접속하며, SSH 키 인증 사용
 
-[privilege_escalation]
+inventory = ./inventory
+# Ansible이 사용할 인벤토리 파일 위치 지정
+# ./inventory : 현재 디렉토리에 있는 inventory 파일 사용하겠음
+# inventory : 관리 대상 호스트(node) 목록이 작성되어있음
+
+remote_user = ansible-user
+# 원격 서버에 접속할 때 사용할 기본 사용자 이름 지정
+# 관리 대상 서버에 ansible-user라는 사용자로 접속할 것임
+
+ask_pass = false
+# SSH 비밀번호를 물어보지 않도록 설정
+# 공개 키 기반 인증(SSH 키) 사용 => 비밀번호 입력할 필요 없음
+
+roles_path = ./roles
+# Ansible 역할(roles)이 저장된 디렉토리 경로 지정
+# ./roles : 현재 디렉토리에 있는 roles 디렉토리를 역할 경로로 사용하겠음
+# 역할(roles) : 재사용 가능한 작업 세트
+
+
+
+[privilege_escalation]  
+# 루트 권한 상승 관련 설정을 정의하는 섹션
+# 작업을 수행할 때, 필요 시 sudo를 사용해 루트 권한으로 실행함
+# 작업 중 역할(roles)을 재사용하기 위해 ./roles 디렉토리 참조함
+
 become = true
+# 권한 상승(Privilege Escalation) 활성화
+# Ansible이 작업 중 일반 사용자에서 루트 사용자로 권한을 전환할 수 있도록 설정함
+
 become_method = sudo
+# 권한 상승에 사용할 방법 지정
+# sudo 명령을 통해 루트 권한으로 작업 실행하겠음
+
 become_user = root
+# 권한 상승 후 실행할 작업을 수행할 사용자 지정
+# 루트 사용자로 작업 실행하겠음
+
 become_ask_pass = false
+# 권한 상승 시 sudo 비밀번호를 물어보지 않도록 설정
+# udo 명령이 비밀번호 없이 실행되도록 서버가 미리 설정되어 있다는 전제하에 사용됨 (例: NOPASSWD 설정)
