study ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -42,4 +42,4 @@ become_user = root
 
 become_ask_pass = false
 # 권한 상승 시 sudo 비밀번호를 물어보지 않도록 설정
-# udo 명령이 비밀번호 없이 실행되도록 서버가 미리 설정되어 있다는 전제하에 사용됨 (例: NOPASSWD 설정)
+# sudo 명령이 비밀번호 없이 실행되도록 서버가 미리 설정되어 있다는 전제하에 사용됨 (例: NOPASSWD 설정)
