--- a/roles/k8s/defaults/main.yml
+++ b/roles/k8s/defaults/main.yml
@@ -1,5 +1,25 @@
 ---
+# yaml 파일 시작
+
 # defaults file for k8s
+
+
 controlplane_IP: 172.16.0.201
+# 쿠버네티스의 Control Plane(제어 노드) IP 주소
+# 이 IP를 통해 워커 노드가 Control Plane과 통신함
+# Control Plane
+  # 클러스터를 관리하는 핵심 역할 수행
+  # API 서버, 스케줄러, 컨트롤러 매니저 등이 동작함
+  
 TOKEN: kdigit.123456789hellow
+# 쿠버네티스 클러스터를 생성할 때 워커 노드가 Control Plane에 가입(join)하기 위해 사용하는 인증 토큰
+# 이 토큰은 kubeadm 명령어로 클러스터 초기화 시 생성되며, kubeadm join 명령에 사용됨
+# 例: kubeadm join 172.16.0.201:6443 --token kdigit.123456789hellow --discovery-token-ca-cert-hash sha256:<hash>
+
 kube_config_dir: /etc/kubernetes
+# 쿠버네티스의 구성 파일이 저장되는 디렉토리
+# 쿠버네티스 클러스터의 설정 정보, 인증 키, TLS 인증서, kubeconfig 파일 등이 저장됨
+  # admin.conf: 클러스터 관리자 인증용 kubeconfig 파일
+  # kubelet.conf: kubelet 서비스용 인증 파일
+  # scheduler.conf: 스케줄러용 인증 파일
+  
